# cmake_learn

./: README.md
t1/: CMakeLists.txt  运行说明.md
t2/: CMakeLists.txt
t2/src/: hello.cpp  main.cpp
t3/: CMakeLists.txt
t3/src/: hello.cpp
t4/: CMakeLists.txt  Readme.md  main.cpp
t4/include/: Gun.h  Solider.h
t4/src/: Gun.cpp  Solider.cpp
